--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
       "@types/bcryptjs": "^2.4.2",
+      "@types/connect-redis": "^0.0.13",
+      "@types/express-session": "^1.15.16",
+      "@types/ioredis": "^4.14.3",
       "@types/jest": "^24.0.25",
       "@types/node": "^8.0.29",
+      "@types/uuid": "^3.4.6",
       "@types/yup": "^0.26.27",
       "faker": "^4.1.0",
       "gql2ts": "^1.10.1",
@@ -16,17 +20,23 @@
    "dependencies": {
       "@types/faker": "^4.1.8",
       "bcryptjs": "^2.4.3",
+      "connect-redis": "^4.0.3",
+      "dotenv": "^8.2.0",
+      "express-session": "^1.17.0",
       "graphql-yoga": "^1.18.3",
+      "ioredis": "^4.14.1",
+      "nodemailer": "^6.4.2",
       "pg": "^7.3.0",
       "reflect-metadata": "^0.1.10",
       "ts-node": "^8.5.4",
       "typeorm": "0.2.22",
       "typescript": "^3.7.4",
+      "uuid": "^3.3.3",
       "yup": "^0.28.0"
    },
    "scripts": {
       "start": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
-      "test": "NODE_ENV=test jest",
-      "gen-schema-types": "gql2ts src/schema.graphql -o src/types/schema.d.ts"
+      "test": "NODE_ENV=test jest --forceExit",
+      "gen-schema-types": "ts-node ./src/scripts/createType.ts"
    }
 }
