--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
      "noImplicitReturns": true,
      "noFallthroughCasesInSwitch": true,
      "esModuleInterop": true,
-     "allowSyntheticDefaultImports": false,
+     "allowSyntheticDefaultImports": true,
      "experimentalDecorators": true
    },
    "exclude": ["node_modules"],
