feat(users): Logot Forgot Password Feature
- Logs out user on logout request
- Enables password rest functionality
- Issues token on password reset request

[Delivers #ForogtPassword/Logout Functionality]

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -7,7 +7,7 @@
    "username": "tolumide",
    "password": "",
    "database": "gq_ts",
-   "dropSchema": true,
+   "dropSchema": false,
    "synchronize": true,
    "logging": true ,
    "uuidExtension": true,
