--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
       "@types/express-session": "^1.15.16",
       "@types/ioredis": "^4.14.3",
       "@types/jest": "^24.0.25",
+      "@types/jsonwebtoken": "^8.3.5",
       "@types/node": "^8.0.29",
       "@types/uuid": "^3.4.6",
       "@types/yup": "^0.26.27",
@@ -25,6 +26,7 @@
       "express-session": "^1.17.0",
       "graphql-yoga": "^1.18.3",
       "ioredis": "^4.14.1",
+      "jsonwebtoken": "^8.5.1",
       "nodemailer": "^6.4.2",
       "pg": "^7.3.0",
       "reflect-metadata": "^0.1.10",
