feat(users): Completely change ORM to Objection.js from TYPEORM
- Adds knexfile for objection.js
- creates Baserepository for querry handling
- Creates Models and Migrations to for the database
- Adds test for modules

[Delivers #Change TypeORM to Objection.js]

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 SECRET='this-is-the-session-secret'
+NODE_ENV=DEVELOPMENT
+DATABASE_URL=gq_ts
+DATABASE_CLIENT='postgresql'
+HOST='localhost'
+USER='tolumide'
+PASSWORD=''
+DATABASE_URL_TEST=
