add travis.yml file

--- a/package.json
+++ b/package.json
@@ -44,6 +44,6 @@
       "test": "NODE_ENV=test jest --detectOpenHandles --forceExit --collect-coverage",
       "gen-schema-types": "ts-node ./src/scripts/createType.ts",
       "typeorm": "ts-node ./node_modules/.bin/typeorm",
-      "knex:migrate": "knex migrate:make"
+      "migrate": "knex migrate:latest"
    }
 }
